--- a/index.html
+++ b/index.html
@@ -1,60 +1,52 @@
-<!doctype html>
-<html lang="bs">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>StreetMode</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StreetMode Shop</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-black">
-  <header class="site-header">
-    <div class="container">
-      <div class="brand"><strong>STREETMODE</strong></div>
-      <nav class="nav">
-        <button id="langBtn" class="btn small">EN / BS</button>
-        <a href="#shop" class="btn">Shop / Prodavnica</a>
-        <a href="#contact" class="btn">Contact / Kontakt</a>
-      </nav>
-    </div>
+<body>
+  <header>
+    <h1>STREETMODE</h1>
+    <p>Urban Style | Authentic Streetwear</p>
   </header>
 
-  <main class="container main">
-    <section id="home" class="home">
-      <h1 data-i18n="heroTitle">Streetwear kolekcije — direktno iz izvora</h1>
-      <p data-i18n="heroSubtitle">Dostava širom BiH. Brzo, pouzdano, stylish.</p>
-    </section>
+  <section class="hero">
+    <h2>New Collection</h2>
+    <p>Explore the latest street fashion trends.</p>
+    <a href="#products" class="cta-btn">Shop Now</a>
+  </section>
 
-    <section id="shop" class="shop">
-      <h2 data-i18n="shopTitle">Shop / Prodavnica</h2>
-      <div id="products" class="products"></div>
-    </section>
+  <main id="products">
+    <div class="product">
+      <img src="https://via.placeholder.com/300x350" alt="Hoodie" />
+      <h3>StreetMode Hoodie</h3>
+      <p>€75</p>
+      <a href="https://deateath.x.yupoo.com/categories/4571156" target="_blank" class="buy-btn">View on Yupoo</a>
+    </div>
 
-    <aside class="cart" id="cartPanel">
-      <h3 data-i18n="cartTitle">Tvoja korpa</h3>
-      <div id="cartItems"></div>
-      <div class="cart-total" id="cartTotal">0 KM</div>
-      <button id="checkoutBtn" class="btn primary" data-i18n="checkout">Checkout / Kupi</button>
-    </aside>
+    <div class="product">
+      <img src="https://via.placeholder.com/300x350" alt="Sneakers" />
+      <h3>Classic Sneakers</h3>
+      <p>€90</p>
+      <a href="https://deateath.x.yupoo.com/categories/4571156" target="_blank" class="buy-btn">View on Yupoo</a>
+    </div>
 
-    <section id="contact" class="contact">
-      <h2 data-i18n="contactTitle">Contact / Kontakt</h2>
-      <form id="orderForm" class="order-form">
-        <input name="name" placeholder="Ime i prezime" required />
-        <input name="phone" placeholder="Telefon" required />
-        <input name="address" placeholder="Adresa za dostavu" required />
-        <textarea name="notes" placeholder="Napomene (veličina, boja)"></textarea>
-        <button type="submit" class="btn primary" data-i18n="placeOrder">Potvrdi narudžbu</button>
-      </form>
-    </section>
-
-    <footer class="footer">
-      <div>© STREETMODE — <span id="year"></span></div>
-    </footer>
+    <div class="product">
+      <img src="https://via.placeholder.com/300x350" alt="Jacket" />
+      <h3>Oversized Jacket</h3>
+      <p>€110</p>
+      <a href="https://deateath.x.yupoo.com/categories/4571156" target="_blank" class="buy-btn">View on Yupoo</a>
+    </div>
   </main>
 
-  <div id="modal" class="modal hidden"></div>
-
-  <script src="products.json" type="application/json" id="productsData"></script>
-  <script src="app.js"></script>
+  <footer>
+    <p>© 2025 StreetMode. All rights reserved.</p>
+    <p>Follow us on 
+      <a href="https://instagram.com" target="_blank">Instagram</a> & 
+      <a href="https://tiktok.com" target="_blank">TikTok</a>
+    </p>
+  </footer>
 </body>
 </html>
